--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+    "name": "api-ipca",
+    "version": "1.0.0",
+    "description": "API para Cálculos de IPCA",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js"
+    },
     "type": "module",
     "dependencies": {
         "cors": "^2.8.5",
